--- a/chat-app/public/index.html
+++ b/chat-app/public/index.html
@@ -7,7 +7,11 @@
 
     <body>
         Chat App
-        <button id="increment">+1</button>
+        <form id="message-form">
+            <input name="message" placeholder="Type something" />
+            <button>Submit</button>
+        </form>
+
         <script src="/socket.io/socket.io.js"></script>
         <script src="/js/chat.js"></script>
     </body>
