--- a/chat-app/public/chat.html
+++ b/chat-app/public/chat.html
@@ -17,7 +17,7 @@
                     
                 <div class="compose">
                     <form id="message-form">
-                        <input name="message" placeholder="Type something" />
+                        <input name="message" placeholder="Type something" required autocomplete="off" />
                         <button>Submit</button>
                     </form>
 
@@ -31,7 +31,7 @@
         <script id="message-template" type="text/html">
             <div class="message">
                 <p>
-                    <span class="message__name">Some User Name</span>
+                    <span class="message__name">{{username}}</span>
                     <span class="message__meta">{{createdAt}}</span>
                 </p>
                 <p>{{message}}</p>
@@ -41,7 +41,7 @@
         <script id="location-template" type="text/html">
             <div class="message">
                 <p>
-                    <span class="message__name">Some User Name</span>
+                    <span class="message__name">{{username}}</span>
                     <span class="message__meta">{{createdAt}}</span>
                 </p>
                 <p>
